# udp_audio_server

./: .gitignore  README.md  pyproject.toml
macos-client/: .gitignore  Package.swift  README.md
macos-client/Sources/UDPTTSCore/: AudioPlayer.swift  Book.swift  Chunker.swift  JitterBuffer.swift  UDPProtocol.swift  UDPStreamer.swift
macos-client/Sources/UDPTTSMenuBar/: App.swift  ContentView.swift  HotKeyManager.swift  TTSClientModel.swift
macos-client/Sources/udptts-probe/: main.swift
macos-client/Tests/UDPTTSCoreTests/: ChunkerTests.swift  UDPTTSCoreTests.swift
macos-client/scripts/: build_app.sh
scripts/: run_client.py  run_server.py
src/udp_tts/: __init__.py  book.py  chunker.py  client.py  protocol.py  reader.py  server.py  tts_engine.py
tests/: test_book.py  test_chunker.py  test_jitter_buffer.py  test_protocol.py
