[project]
name = "udp-tts"
version = "0.1.0"
description = "UDP streaming for Qwen3-TTS audio (server + real-time client)"
readme = "README.md"
# Qwen3-TTS targets Python 3.12. uv manages the interpreter on every host
# (including macOS), so the client side gets 3.12 too without touching system
# Python.
requires-python = ">=3.12"
# Shared by both server and client.
dependencies = [
    "numpy>=1.21",
]

[project.scripts]
udp-tts-server = "udp_tts.server:main"
udp-tts-client = "udp_tts.client:main"

# PEP 735 dependency groups. Groups are NOT installed by default, so a bare
# `uv sync` gets only the shared base. Install one side explicitly:
#
#   uv sync --group client      # Mac / playback host  (base + sounddevice)
#   uv sync --group server      # GPU host             (base + qwen-tts + torch)
#
# `--group` keeps the shared base; use `--only-group X` to install a group
# without the project itself.
[dependency-groups]
client = [
    "sounddevice>=0.4.6",  # wheels bundle PortAudio; no system install needed
]
server = [
    "torch",
    "qwen-tts",
    "soundfile",
    # flash-attn enables the faster flash_attention_2 path (the engine falls
    # back to sdpa automatically if it is missing). We pin a prebuilt wheel via
    # [tool.uv.sources] below to avoid compiling against CUDA headers. The wheel
    # is built for a specific Python/torch/CUDA/platform combo, so the marker
    # restricts it to the linux x86_64 + CPython 3.13 GPU host it targets.
    "flash-attn ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_full_version >= '3.13' and python_full_version < '3.14'",
]

# Prebuilt flash-attn wheel from mjun0812/flash-attention-prebuild-wheels.
# Must match the server host's CPython/torch/CUDA: cp313 + torch 2.12 + cu130
# on linux x86_64. If you upgrade torch or Python, pick the matching wheel from
# https://github.com/mjun0812/flash-attention-prebuild-wheels/releases
[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.17/flash_attn-2.8.3%2Bcu130torch2.12-cp313-cp313-linux_x86_64.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/udp_tts"]
